Fixed the preview image

--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
   <meta property="og:description"
     content="Building high-performing websites and AI-powered systems that drive conversions and growth." />
   <meta property="og:type" content="website" />
-  <meta property="og:image"
-    content="C:\Users\guest123\Desktop\akki-portfolio\buildwithakash\public\buildwithakash.png" />
+  <meta property="og:image" content="/buildwithakash.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@yadav_akash17" />
-  <meta name="twitter:image"
-    content="C:\Users\guest123\Desktop\akki-portfolio\buildwithakash\public\buildwithakash.png" />
+  <meta name="twitter:image" content="/buildwithakash.png" />
 </head>
 
 <body>
